# Client-Server-Application

./: README.md
ClientServer/: CMakeLists.txt
ClientServer/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
ClientServer/Client/FileSearch/: CMakeLists.txt  FileSearch.h
ClientServer/Client/FileSearch/LinFileSearch/: LinFileSearch.cpp
ClientServer/Client/FileSearch/WinFileSearch/: WinFileSearch.cpp
ClientServer/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
ClientServer/Socket/: CMakeLists.txt
ClientServer/Socket/ISocket/: ISocket.cpp  ISocket.h
ClientServer/Socket/LinSocket/: LinSocket.cpp  LinSocket.h
ClientServer/Socket/WinSocket/: WinSocket.cpp  WinSocket.h
